--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body>
   <div class="o-wrap">
       <main class="o-main">
-          <section class="o-section o-section--dark  u-center">
+          <section class="o-section o-section--blue  u-center">
             <h2>Scroll Down</h2>
             <span>&laquo;</span>	
           </section>
-          <section class="o-section o-section--light  u-center">
+          <section class="o-section o-section--orange  u-center">
             <h2>Scroll Down</h2>
             <span>&laquo;</span>		
           </section>
